--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
-tensorflow = {version = "^2.10.0", markers = "sys_platform != 'darwin'"}
-tensorflow-macos = {version = "^2.10.0", markers = "sys_platform == 'darwin'"}
-tensorflow-metal = {version = "^0.6.0", markers = "sys_platform == 'darwin'"}
+tensorflow = "^2.10.0"
 tqdm = "^4.64.1"
 networkx = "^2.8.8"
 numpy = "1.21.5"
@@ -33,4 +31,3 @@ multi_line_output = 3
 [tool.pytest.ini_options]
 addopts = "--cov-report xml:coverage.xml --cov=. --junitxml=xunit.xml"
 junit_family = "xunit2"
-
